[package]
name = "mqtt-system-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { version = "0.8.8", features = ["lua54", "vendored", "serialize"] }
rumqttc = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_yaml = "0.9"
gethostname = "0.4.1"