[package]
name = "mqtt-system-monitor"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
publish = false

[dependencies]
gethostname = "0.4.1"
log = "0.4.17"
mlua = { version = "0.8.8", features = ["lua54", "vendored", "serialize"] }
rumqttc = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_yaml = "0.9"
stderrlog = "0.5.4"
tokio = { version = "1", features = ["full"] }